000.old/blog.langnang/usr/themes/castle-Typecho-Theme-master/docs/docs/0.9.3/other/update-log.md
# 更新日志

------

## 0.9.3 - 2020.03.15
- 新增：短代码（Beta）
- 新增：文章/页面编辑器表情选择框
- 新增：可自定义备案指向链接的设置项
- 新增：[Loli.net Gravatar](https://gravatar.loli.net/) 头像源 （By @SatoSouta）
- 新增：评论关闭提示/评论关闭是否显示评论列表的设置项
- 新增：「Header」「Footer」设置项（可向 Header 或 Footer 插入 HTML）
- 修复：友链页面的小问题
- 修复：表情框 TAB 选项卡的问题
- 修复：归档页面标签云的间距问题
- 修复： APlayer 吸底模式暗色下的配色问题
- 修复：暗色/亮色切换的提示错误（By @kengwang）
- 参照 [Cuckoo](https://github.com/bhaoo/Cuckoo) 的排版并优化排版（互抄能使人进步（确信））

## 0.9.1 - 2020.02.29
- 恢复：侧栏恢复了 `list` 类型
- 恢复：首页卡片恢复了 `无图` 样式
- 恢复：APlayer 自适应暗色模式
- 修复：封面图源 `第三方自定义API` 无效的问题
- 恢复：代码高亮、表格解析
- 修复：侧栏个人信息显示问题

## 0.9.0 Beta - 2020.02.29
- 优化：AJAX 评论无刷新
- 新增：标签/归档独立页面
- 新增：新增了前台登录（AJAX）
- 修改：主题后台设置界面大改一通
- 优化：表情框由 JS 动态生成，表情配置更加规范
- 修改：底栏的排版改成了居中，去除了社交按钮
- 移除：不再依赖 JQuery 转而使用 MDUI 自带的 Mini JQ 库
- 更多：还有其他小修改就自行发现吧 (╹ڡ╹ )

## 0.3.5 - 2019.08.30
- 修复表情框问题
- 评论样式小幅度修改
- 修复友情链接申请页面问题
- 新增短代码（目前只有[del][/del]

## 0.3.3 - 2019.08.16
- 修复检查更新。
- 修改高亮样式存放处。

## 0.3.2 - 2019.06.22
- 增加 \<meta name="theme-color"\> 标签（刚刚想起来忘记加了

## 0.3.1 - 2019.06.22
- 底部可透明化
- 修复 owo 表情问题
- 修复 Archive 页面报错问题
- 顶部工具栏可在向下滑动时隐藏（详见主题设置
- 修改侧边栏时间归档日期格式并加上归档内文章数量显示
- 代码高亮样式可自定义（皮肤样式前往 此处 下载并放入 `others/css/highlight/` 文件夹内再到后台选择并保存

## 0.3.0 - 2019.06.09
- 夜间模式修复
- 表格终于有了样式
- 表情框样式/结构修改
- 主题色终于成为真正的主题色了
- 夜间模式下 Aplayer 也会跟着变成暗色
- Header 稍稍修改了下，使被抓取的信息更加详细（或是准确？
- 增加了第三方图源和第三方静态资源设置项（高级设置 Demo 主题目录下有

## 0.2.6 - 2019.05.03
- 修复搜索框样式
- 修复了 RSS 链接问题
- 卡片透明也能开启夜间模式
- 修复了选择表情却变成新标签打开
- 修复了评论区 QQ 头像尺寸过小问题
- 修复了 Functions.php 中某处加多了;的问题
- 更换了随机封面图为 sm.ms 源

## 0.2.5 - 2019.04.21
- 新增模板设置备份
- 修改底部版权位置
- 更新了备案号链接的网址
- 修复了 Huaji 表情的排版问题
- 删除了底部版权旁边的 Emoji
- 修复了搜索框无法搜索的问题
- 修复了 PHP5.4 及以下 `!empty` 导致的报错(归根到底是我的问题
- 设置页面新增设置项(得重新启用主题才能生效，重新启用前请备份设置)
- 新增追番页面(请添加名为 `bgmid` 的字段内容为你的 Bangumi id 或用户名)
- 对文章的排版进行了修改(代码高亮、H1-H6 的标题样式、code 样式、blockquote 样式)

## 0.2.1 - 2019.04.16
- 侧边栏头图支持更换
- 文章/独立页新增了设置项
- 修复了夜间模式下的部分问题
- 修复了主题设置的检查更新问题
- 修复了表情 HuaJi23-27 没有解析的问题
- **修正了版本号错误导致 Jsdelivr 无法使用的问题**
- ~~重新制作了主题封面图（封面参照CatUI制作（逃 ）~~

## 0.2.0 - 2019.04.15
- 新增夜间模式
- 增加了友链页面
- 增加了标签云页面
- 增加了 `archive` 页面
- 取消了对J S 的加密
- 修复了 404 页面的一些问题
- 使评论框内的链接按钮更加明显
- 自动给非站内链接添加 `target="_blank"` 属性
- 增加了一些表情(新增部分表情来自 H-Siren )

## 0.1.0 - 2019.04.07
- 重新开坑